# clyngor-with-clingo

./: .gitignore  MANIFEST.in  Makefile  README.mkd  put-clingo-version.sh  retrieve-clingo.sh  setup.cfg  setup.py
clyngor_with_clingo/: __init__.py
