[metadata]
name = clyngor-with-clingo
version = 5.3.0
description = Installation of clingo binary along clyngor
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/clyngor-with-clingo
license = GPL
keywords = Answer Set Programming, wrapper, clingo
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: ASP

[options]
zip_safe = False
packages = clyngor_with_clingo
include_package_data = True
install_requires =
    clyngor>=0.3.15

[options.data_files]
/usr/bin =
    bin/linux/clingo; platform_system=="Linux"
    bin/macos/clingo; platform_system=="Darwin"
    bin/win/clingo.exe; platform_system=="Windows"


[zest.releaser]
create-wheel = yes
