[metadata]
name = clyngor-with-clingo
version = 5.3.0
description = Installation of clingo binary along clyngor
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/clyngor-with-clingo
license = GPL
keywords = Answer Set Programming, wrapper, clingo
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: ASP

[options]
zip_safe = False
packages = clyngor_with_clingo
include_package_data = True
install_requires =
    clyngor>=0.3.15

[options.entry_points]
console_scripts = clingo = clyngor_with_clingo:run_clingo

[zest.releaser]
create-wheel = yes
